:lipstick: Added MainActivity.kt and HomeFragment.kt

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,24 +39,24 @@ android {
 }
 
 dependencies {
-    ext.core_ktx = '1.3.2'
-    ext.appcompat = '1.2.0'
-    ext.material_design = '1.2.1'
-    ext.constraint_layout = '2.0.4'
-    ext.dagger_version = '2.28.3-alpha'
-    ext.coroutines_version = '1.4.2'
-    ext.nav_version = '2.3.2'
-    ext.activity_ktx = '1.2.0-beta02'
-    ext.fragment_ktx = '1.3.0-beta02'
-    ext.recyclerview = '1.2.0-beta01'
-    ext.recyclerview_selection = '1.1.0-rc03'
-    ext.lifecycle_version = '1.1.1'
-    ext.retrofit = '2.9.0'
-    ext.retrofit_rx = '2.3.0'
-    ext.okhttp = '4.7.2'
-    ext.stetho = '1.5.1'
-    ext.coil = '1.1.0'
-    ext.lifecycle_ktx = '2.2.0'
+    def core_ktx = '1.3.2'
+    def appcompat = '1.2.0'
+    def material_design = '1.2.1'
+    def constraint_layout = '2.0.4'
+    def dagger_version = '2.28.3-alpha'
+    def coroutines_version = '1.4.2'
+    def nav_version = '2.3.2'
+    def activity_ktx = '1.2.0-beta02'
+    def fragment_ktx = '1.3.0-beta02'
+    def recyclerview = '1.2.0-beta01'
+    def recyclerview_selection = '1.1.0-rc03'
+    def lifecycle_version = '1.1.1'
+    def retrofit = '2.9.0'
+    def retrofit_rx = '2.3.0'
+    def okhttp = '4.7.2'
+    def stetho = '1.5.1'
+    def coil = '1.1.0'
+    def lifecycle_ktx = '2.2.0'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.core:core-ktx:$core_ktx"
