--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
     def stetho = '1.5.1'
     def coil = '1.1.0'
     def lifecycle_ktx = '2.2.0'
+    def paging_version = "3.0.0-alpha11"
+    def rx_android = '3.0.0'
+    def rx_java = '3.0.8'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.core:core-ktx:$core_ktx"
@@ -76,6 +79,9 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
+    implementation "androidx.paging:paging-runtime:$paging_version"
+    implementation "androidx.paging:paging-rxjava3:$paging_version"
+
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_ktx"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_ktx"
     kapt "android.arch.lifecycle:compiler:$lifecycle_version"
@@ -91,7 +97,7 @@ dependencies {
     implementation "com.facebook.stetho:stetho-okhttp3:$stetho"
 
     implementation "com.google.dagger:hilt-android:$dagger_version"
-    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01'
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
     kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
     kapt "com.google.dagger:hilt-android-compiler:$dagger_version"
 
@@ -101,8 +107,8 @@ dependencies {
 
     implementation "io.coil-kt:coil:$coil"
 
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
+    implementation "io.reactivex.rxjava3:rxandroid:$rx_android"
+    implementation "io.reactivex.rxjava3:rxjava:$rx_java"
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
