--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,10 +89,12 @@ dependencies {
     implementation 'androidx.browser:browser:1.3.0'
 
     implementation "com.squareup.retrofit2:retrofit:$retrofit"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_rx"
     implementation "com.squareup.retrofit2:converter-jackson:$retrofit"
     implementation "com.squareup.okhttp3:okhttp:$okhttp"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp"
+
+    implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
+
     implementation "com.facebook.stetho:stetho:$stetho"
     implementation "com.facebook.stetho:stetho-okhttp3:$stetho"
 
