--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,7 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:$fragment_ktx"
     implementation "androidx.recyclerview:recyclerview:$recyclerview"
     implementation "androidx.recyclerview:recyclerview-selection:$recyclerview_selection"
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
