--- a/app/src/nintendo/AndroidManifest.xml
+++ b/app/src/nintendo/AndroidManifest.xml
@@ -13,13 +13,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Trace">
 
-        <activity android:name=".SplashActivity">
+        <activity android:name=".nintendo.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".nintendo.ui.main.MainActivity"/>
     </application>
 
 </manifest>
