:bento: Added MainActivity.kt for Playstore

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,11 @@ android {
             applicationIdSuffix ".nintendo"
             versionNameSuffix "-nintendo"
         }
+        playstore {
+            dimension "app"
+            applicationIdSuffix ".playstore"
+            versionNameSuffix "-playstore"
+        }
     }
 
     dataBinding {
