:sparkles: Working Playstore trace

--- a/app/src/playstore/AndroidManifest.xml
+++ b/app/src/playstore/AndroidManifest.xml
@@ -21,6 +21,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".playstore.ui.main.MainActivity"/>
+        <activity android:name=".playstore.ui.search.SearchActivity"/>
     </application>
 
 </manifest>
